# tutorial-python

./: .gitignore  format_string.py  list.py  path.py  pyproject.toml
file-system/: mad_lib.py  searcher.py
file-system/geography-quiz/: capital_quiz_1.txt  capital_quiz_10.txt  capital_quiz_10_answer.txt  capital_quiz_11.txt  capital_quiz_11_answer.txt  capital_quiz_12.txt  capital_quiz_12_answer.txt  capital_quiz_13.txt  capital_quiz_13_answer.txt  capital_quiz_14.txt  capital_quiz_14_answer.txt  capital_quiz_15.txt  capital_quiz_15_answer.txt  capital_quiz_16.txt  capital_quiz_16_answer.txt  capital_quiz_17.txt  capital_quiz_17_answer.txt  capital_quiz_18.txt  capital_quiz_18_answer.txt  capital_quiz_19.txt  capital_quiz_19_answer.txt  capital_quiz_1_answer.txt  capital_quiz_2.txt  capital_quiz_20.txt  capital_quiz_20_answer.txt  capital_quiz_21.txt  capital_quiz_21_answer.txt  capital_quiz_22.txt  capital_quiz_22_answer.txt  capital_quiz_23.txt  capital_quiz_23_answer.txt  capital_quiz_24.txt  capital_quiz_24_answer.txt  capital_quiz_25.txt  capital_quiz_25_answer.txt  capital_quiz_26.txt  capital_quiz_26_answer.txt  capital_quiz_27.txt  capital_quiz_27_answer.txt  capital_quiz_28.txt  (+31 more)
web-scraping/: beautiful_soup.py  downloadXkcd.py  map_it.py  request_romeo_and_juliet.py  searchpypi.py  selenium_tutorial.py
